--- a/login.html
+++ b/login.html
@@ -34,4 +34,9 @@
     </div>
     
 </body>
+<script src="/socket.io/socket.io.js"></script>
+
+<script>
+    var socket = io();
+</script>
 </html>
