user page with the iframe. dummy data currently populated

--- a/userPage.html
+++ b/userPage.html
@@ -12,7 +12,11 @@
 <body>
     <div class="container">
         <div id="login">
-            <h1>Your Reviews: </h1>
+            <h1 style="text-align: center;">Your Reviews </h1>
+
+            <!-- remove the border before final version -->
+            <iframe id="userComments" src="userPageComments.html" title="userPageComments" ></iframe>
+
            <!-- Insert comments + scroll bar here -->
            
             <div class="centerButton">
