--- a/register.html
+++ b/register.html
@@ -23,7 +23,7 @@
                 <input id="submit" type="submit" value="Next">
             </div>
             <div class="centerButton">
-                <input id="cancel" type="button" value="Cancel">
+                <input id="cancel" type="submit" value="Cancel">
             </div>
         </div>
     </div>
