--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                     <p><b>Rating: </b>5/5 <b>from</b> 100 <b>students</b></p>
                     <a href="#">Add a review</a>
                     <p><b>Comments:</b></p>
+                    <iframe src="review.html" height="261" width="446" style="border:none" title="Iframe Example"></iframe>
                 </div>
             </div>
         </div>
