login back to homepage

--- a/review.html
+++ b/review.html
@@ -36,7 +36,7 @@
         <div id="keywords"></div>
         
         <br><br>
-        <input id="cancel" type="button" value="Cancel">
+        <a id="cancel" href="index.html">Cancel</a>
         <input id="addRating" type="button" value="Add Rating">
         </form>
     </div>
