--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
             
             <br>
             <div class="centerButton">
-                <a id="cancel" href="login.html">Cancel</a>
+                <a id="cancel" href="index.html">Cancel</a>
             </div>
                 
             <h2>Don't have an account?</h2>
