--- a/review.html
+++ b/review.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Review</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="public/styles/style.css">
     <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <script src="https://raw.githack.com/sabieber/token-autocomplete/master/built/token-autocomplete.js"></script>
-    <link href="styles/token-autocomplete.css" rel="stylesheet" type="text/css" media="all">
+    <link href="public/styles/token-autocomplete.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body>
     <div class="review">
