--- a/register.html
+++ b/register.html
@@ -27,7 +27,7 @@
             <br>
 
             <div class="centerButton">
-                <a id="cancel" href="login.html">Cancel</a>
+                <a id="cancel" href="login">Cancel</a>
             </div>
         </div>
     </div>
