--- a/register.html
+++ b/register.html
@@ -16,7 +16,7 @@
             <form id="registerForm">
                 <input id="email" type="text" placeholder="Email">
                 <input id="password" type="password" placeholder="Password">
-                <input id="cPassword" type="password" placeholder="Confirm Password">
+                <input id="confirmPassword" type="password" placeholder="Confirm Password">
 
                 <div class="centerButton">
                     <input type="submit" value="Next">
