--- a/register.html
+++ b/register.html
@@ -39,7 +39,7 @@
 
     let email = document.getElementById("email");
     let password = document.getElementById("password");
-    let confirmPassword = document.getElementById("cPassword");
+    let confirmPassword = document.getElementById("confirmPassword");
     let submit = document.getElementById("submit");
 
     submit.addEventListener('click', (e) => {
