--- a/modifyCourses.html
+++ b/modifyCourses.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,22 +10,26 @@
     <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 </head>
+
 <body>
     <div class="container">
-        <div > <!--id="login"-->
+        <div>
+            <!--id="login"-->
             <h1 style="text-align: left;">Modify Course</h1>
             <form>
                 <h2 style="text-align: left;">Course Name</h2>
-                <input id = "courseNameBox" type="text" placeholder="Enter the course name">
+                <input id="courseNameBox" type="text" placeholder="Enter the course name">
                 <h2 style="text-align: left;">Description</h2>
                 <textarea> old description here</textarea> <!-- find a way to enter the previous information later-->
-                
+
             </form>
             <div>
-               <div class="confirmButtons"> <input  type="submit" id="cancel" value="Cancel" style="width: 20rem;" ></div>
-               <div class="confirmButtons" > <input type="submit" value="Add Course" style="width: 30rem;"></div>
+                <div class="confirmButtons"> <input type="submit" id="cancel" value="Cancel" style="width: 20rem;">
+                </div>
+                <div class="confirmButtons"> <input type="submit" value="Add Course" style="width: 30rem;"></div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
