--- a/register.html
+++ b/register.html
@@ -14,9 +14,9 @@
         <div id="login">
             <h1>Register</h1>
             <form id="registerForm">
-                <input id="email" type="text" placeholder="Email">
-                <input id="password" type="password" placeholder="Password">
-                <input id="confirmPassword" type="password" placeholder="Confirm Password">
+                <input id="email" type="text" placeholder="Email" autocomplete="off" required>
+                <input id="password" type="password" placeholder="Password" autocomplete="off" required>
+                <input id="confirmPassword" type="password" placeholder="Confirm Password" autocomplete="off">
 
                 <div class="centerButton">
                     <input id="submit" type="submit" value="Next">
