route to home on cancel

--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
 
             <br>
             <div class="centerButton">
-                <a id="cancel" href="javascript: history.go(-1)">Cancel</a>
+                <a id="cancel" href="/">Cancel</a>
             </div>
 
             <h2>Don't have an account?</h2>
