--- a/addCourses.html
+++ b/addCourses.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,13 +10,15 @@
     <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 </head>
+
 <body>
     <div class="container">
-        <div > <!--id="login"-->
+        <div>
+            <!--id="login"-->
             <h1 style="text-align: left;">Add Course</h1>
             <form>
                 <h2 style="text-align: left;">Add Course</h2>
-                <input id = "courseNameBox" type="text" placeholder="Enter the course name">
+                <input id="courseNameBox" type="text" placeholder="Enter the course name">
                 <h2 style="text-align: left;">Description</h2>
                 <textarea id="courseDescriptionBox" placeholder="Enter the course description:"></textarea>
                 
