course comments reply buttons

--- a/courseComments.html
+++ b/courseComments.html
@@ -21,13 +21,23 @@
             <span class="fa fa-star fa-lg"></span>
         </p>
 
-        <p id="comment">Test comment</p>
+        <p id="comment">I found this course really cool. Learned about web dev a lot. I’d reccomend taking
+            this course. </p>
 
         <div class="keywords">
             <span class="keyword">Easy</span>
             <span class="keyword">Informative</span>
             <span class="keyword">Fun</span>
         </div>
+
+        <div class="replyButtons">
+            <a id="reply" href="#">Reply to Comment</a>
+            <a id="showRep" href="#">Show Replies</a>
+        </div>
+            
+        
     </div>
+
+    <hr>
 </body>
 </html>
