placed star rating in div

--- a/courseComments.html
+++ b/courseComments.html
@@ -14,11 +14,14 @@
 <body>
     <div class="review">
         <p id="date">March 12, 2022 
-            <span class="fa fa-star fa-lg checked"></span>
-            <span class="fa fa-star fa-lg checked"></span>
-            <span class="fa fa-star fa-lg checked"></span>
-            <span class="fa fa-star fa-lg"></span>
-            <span class="fa fa-star fa-lg"></span>
+            <div class="starRating">
+                <span class="fa fa-star fa-lg checked"></span>
+                <span class="fa fa-star fa-lg checked"></span>
+                <span class="fa fa-star fa-lg checked"></span>
+                <span class="fa fa-star fa-lg"></span>
+                <span class="fa fa-star fa-lg"></span>
+            </div>
+            
         </p>
 
         <p id="comment">I found this course really cool. Learned about web dev a lot. I’d reccomend taking
