link "add a review" button to review page

--- a/review.html
+++ b/review.html
@@ -38,7 +38,7 @@
             <div id="keywords"></div>
 
             <br><br>
-            <a id="cancel" href="index">Cancel</a>
+            <a id="cancel" href="/">Cancel</a>
             <input id="addRating" type="button" value="Add Rating">
         </form>
     </div>
