--- a/moderator.html
+++ b/moderator.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rate My UofC Course</title>
-    <link rel="stylesheet" href="public/styles/indexStyle.css">
+    <link rel="stylesheet" href="styles/indexStyle.css">
     <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -81,13 +81,21 @@
                 </div>
             </div>
             <div class="course-content">
-                <button type="button" class="collapsible">SENG 300</button>
+                <button type="button" class="collapsible">SENG300
+                    <!--avg star rating example-->
+                    <span class="fa fa-star fa-lg checked"></span>
+                    <span class="fa fa-star fa-lg checked"></span>
+                    <span class="fa fa-star fa-lg checked"></span> <!-- full star -->
+                    <span class="fa fa-star-half-full fa-lg"></span> <!-- half star-->
+                    <span class="fa fa-star fa-lg"></span> <!-- unrated -->
+                </button>
+
                 <div class="course-contents">
                     <p><b>Description: </b>An overview of software engineering methods and technologies for developing
                         web-based software systems.</p>
                     <p><b>Rating: </b>5/5 <b>from</b> 100 <b>students</b></p>
                     <p><b>Comments:</b></p>
-                    <iframe src="review.html" height="261" width="446" style="border:none"
+                    <iframe src="courseCommsMod" height="261" width="446" style="border:none"
                         title="Iframe Example"></iframe>
                 </div>
             </div>
