--- a/login.html
+++ b/login.html
@@ -67,7 +67,7 @@
         }).then((res) => res.json());
 
         if (result.status === 'ok') {
-            localStorage.setItem('token', result.data);
+            // localStorage.setItem('token', result.data);
             location.assign('/');
         } else {
             alert(result.error);
