--- a/userPage.html
+++ b/userPage.html
@@ -28,7 +28,7 @@
                 <input type="submit" value="Go Back To Homepage">
             </div>
             <div class="centerButton">
-                <input type="submit" value="Logout">
+                <input type="submit" value="Logout" onclick="location.href='/logout'">
             </div>
         </div>
     </div>
