--- a/userPage.html
+++ b/userPage.html
@@ -14,10 +14,10 @@
 <body>
     <div class="container">
         <div id="login">
-            <h1 style="text-align: center;">Your Reviews </h1>
+            <h1 style="text-align: center;">Your Reviews</h1>
 
             <!-- remove the border before final version -->
-            <iframe id="userComments" src="userPageComments.html" title="userPageComments"></iframe>
+            <iframe id="userComments" src="/userPageComments" title="userPageComments"></iframe>
 
             <!-- Insert comments + scroll bar here -->
 
@@ -25,7 +25,7 @@
                 <input type="submit" value="Delete Comment">
             </div>
             <div class="centerButton">
-                <input type="submit" value="Go Back To Homepage">
+                <input type="submit" value="Go Back To Homepage" onclick="location.href='/'">
             </div>
             <div class="centerButton">
                 <input type="submit" value="Logout" onclick="location.href='/logout'">
