--- a/moderator.html
+++ b/moderator.html
@@ -27,7 +27,7 @@
                         <a id="addCourse" href="addCourses">Add Course</a>
                         <a id="modifyCourse" href="modifyCourses">Modify Course</a>
                         <a id="removeCourse" href="#remove">Remove Course</a>
-                        <a id="logout" href="index">Logout</a>
+                        <a id="logout" href="/logout">Logout</a>
                     </div>
                 </div>
 
