fix addCourse route

--- a/moderator.html
+++ b/moderator.html
@@ -24,7 +24,7 @@
                 <div class="dropdownMenu">
                     <button onclick="dropdownMenu()" id="menubtn">≡</button>
                     <div id="myDropdown" class="menu-content">
-                        <a id="addCourse" href="addCourses">Add Course</a>
+                        <a id="addCourse" href="addCourse">Add Course</a>
                         <a id="modifyCourse" href="modifyCourses">Modify Course</a>
                         <a id="removeCourse" href="#remove">Remove Course</a>
                         <a id="logout" href="/logout">Logout</a>
