--- a/moderator.html
+++ b/moderator.html
@@ -36,73 +36,24 @@
         </div>
     </div>
 
-    <div class="header-container">
-        <div class="wrapper">
-            <header>
-                <div class="header-content">
-                    <div class="dept-select">
-                        <select name="department" id="department">
-                            <option value="" disabled selected hidden>Select a department</option>
-                            <option value="math">MATH</option>
-                            <option value="seng">SENG</option>
-                            <option value="grst">GRST</option>
-                        </select>
-                    </div>
-                    <h2>OR</h2>
-                    <div class="search-box">
-                        <input type="text" placeholder="Enter a specific course">
-                    </div>
-                </div>
-            </header>
+    <div class="course-content">
+        <button type="button" class="collapsible">SENG300
+            <!--avg star rating example-->
+            <span class="fa fa-star fa-lg checked"></span>
+            <span class="fa fa-star fa-lg checked"></span>
+            <span class="fa fa-star fa-lg checked"></span> <!-- full star -->
+            <span class="fa fa-star-half-full fa-lg"></span> <!-- half star-->
+            <span class="fa fa-star fa-lg"></span> <!-- unrated -->
+        </button>
+
+        <div class="course-contents">
+            <p><b>Description: </b>An overview of software engineering methods and technologies for developing
+                web-based software systems.</p>
+            <p><b>Rating: </b>5/5 <b>from</b> 100 <b>students</b></p>
+            <p><b>Comments:</b></p>
+            <iframe src="courseCommsMod" height="261" width="446" style="border:none" title="Iframe Example"></iframe>
         </div>
     </div>
-
-    <div class="body-container">
-        <div class="wrapper">
-            <h2>Popular Courses</h2>
-            <div class="filters">
-                <div class="course-filter">
-                    <select name="filter" id="filter">
-                        <option value="" disabled selected hidden>Filter</option>
-                        <option value="200">200 Levels</option>
-                        <option value="300">300 Levels</option>
-                        <option value="400">400 Levels</option>
-                        <option value="500">500 Levels</option>
-                    </select>
-                </div>
-                <div class="course-sort">
-                    <select name="sort-by" id="sort-by">
-                        <option value="" disabled selected hidden>Sort By</option>
-                        <option value="High-rating">Highest to Lowest Rated</option>
-                        <option value="Low-rating">Lowest to Highest Rated</option>
-                        <option value="Most">Most Rated</option>
-                        <option value="Least">Least Rated</option>
-                    </select>
-                </div>
-            </div>
-            <div class="course-content">
-                <button type="button" class="collapsible">SENG300
-                    <!--avg star rating example-->
-                    <span class="fa fa-star fa-lg checked"></span>
-                    <span class="fa fa-star fa-lg checked"></span>
-                    <span class="fa fa-star fa-lg checked"></span> <!-- full star -->
-                    <span class="fa fa-star-half-full fa-lg"></span> <!-- half star-->
-                    <span class="fa fa-star fa-lg"></span> <!-- unrated -->
-                </button>
-
-                <div class="course-contents">
-                    <p><b>Description: </b>An overview of software engineering methods and technologies for developing
-                        web-based software systems.</p>
-                    <p><b>Rating: </b>5/5 <b>from</b> 100 <b>students</b></p>
-                    <p><b>Comments:</b></p>
-                    <iframe src="courseCommsMod" height="261" width="446" style="border:none"
-                        title="Iframe Example"></iframe>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
 
 </body>
 
