--- a/addCourse.html
+++ b/addCourse.html
@@ -21,36 +21,54 @@
                 <input id="courseNameBox" type="text" placeholder="Enter the course name">
                 <h2 style="text-align: left;">Description</h2>
                 <textarea id="courseDescriptionBox" placeholder="Enter the course description:"></textarea>
-                
+
             </form>
             <div>
-               <div class="confirmButtons"> <input  type="submit" id="cancel" value="Cancel" style="width: 20rem;" ></div>
-               <div class="confirmButtons" > <input type="submit" id="confirm" value="Add Course" style="width: 30rem;"></div>
+                <div class="confirmButtons"> <input type="submit" id="cancel" value="Cancel" required
+                        style="width: 20rem;"></div>
+                <div class="confirmButtons"> <input type="submit" id="confirm" value="Add Course" required
+                        style="width: 30rem;"></div>
             </div>
         </div>
     </div>
 </body>
-<script src="/socket.io/socket.io.js"></script>
 
 <script>
-    var socket = io("localhost:3000");
-
-    let courseName = document.getElementById("courseNameBox");
-    let courseDescription = document.getElementById("courseDescriptionBox");
     let confirm = document.getElementById("confirm");
 
-    confirm.addEventListener('click', (e) => {
+    confirm.addEventListener('click', async (e) => {
         e.preventDefault();
+        let courseName = document.getElementById("courseNameBox").value;
+        let courseDescription = document.getElementById("courseDescriptionBox").value;
 
-        if (!courseName.value) {
-            console.log("Add Course: need course name");
+        // TODO: regex coursename to letters, space, and then number
+        if (!courseName) {
+            alert("Need course name");
             return;
-        } else if (!courseDescription.value) {
-            console.log("Add Course Description: need course description");
+        } else if (!courseDescription) {
+            alert("Need course description");
             return;
-        } 
-        console.log("Course added successfully");
-        socket.emit('course_creation', courseName.value, courseDescription.value);
+        }
+
+        const result = await fetch('/api/addCourse', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({
+                courseName,
+                courseDescription
+            })
+        }).then((res) => res.json());
+
+        if (result.status === 'ok') {
+            console.log("Course added successfully");
+            alert('Course added successfully');
+            window.location = '/';
+        } else {
+            alert(result.error);
+        }
+
     })
 
 </script>
